--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="theme-color" content="#08583D" />
-    <!-- #10B981 -->
-    <link rel="icon" type="image/svg+xml" href="/kliko.svg" />
+    <meta name="theme-color" content="#002761" />
+    <!-- #003b94 -->
+    <!-- <link rel="icon" type="image/svg+xml" href="/kliko.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
